--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
-/node_modules
+/source/node_modules
 /.pnp
 .pnp.js
 
